--- a/이력서.html
+++ b/이력서.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1><a href="https://github.com/khu1020/Smart_Factory/blob/master/%ED%96%89%EC%A0%95%EB%AC%B8%EC%84%9C/%EC%9D%B4%EB%A0%A5%EC%84%9C.md">이력서보기</a></h1><hr>
-        <img src="한지민.jpg" height="300">   
+        <img src="http://imgnews.naver.net/image/011/2019/02/16/0003506302_001_20190216145558315.jpg" height="300">   
         <h2><strong>인적사항</strong></h2>
             <ul>
                 <li>이름 : 강현욱 KangHyunWook</li>
